Added persistence and database initialization using Chronicle DB